objects/OpportunityRCA__mdt.object
<CustomObject>
    <fields>
        <fullName>ClauseSubType__c</fullName>
        <label>Clause Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate Rent &gt;$7.5M</fullName>
                    <default>true</default>
                    <label>Aggregate Rent &gt;$7.5M</label>
                </value>
                <value>
                    <fullName>Amendment to Repayment of Fitout Contribution</fullName>
                </value>
                <value>
                    <fullName>Area &gt; 2500sqm</fullName>
                </value>
                <value>
                    <fullName>Capital &gt; $5M</fullName>
                </value>
                <value>
                    <fullName>Capped Occ Costs</fullName>
                </value>
                <value>
                    <fullName>Capped Outgoings, statutory charges</fullName>
                </value>
                <value>
                    <fullName>Change in Usage</fullName>
                </value>
                <value>
                    <fullName>Compensation Clause</fullName>
                </value>
                <value>
                    <fullName>Co-Tenancy Agreement</fullName>
                </value>
                <value>
                    <fullName>Delete or Amend Demolition Clause ability to invoke demo cl.</fullName>
                </value>
                <value>
                    <fullName>Delete or Amend Demolition Clause ability to invoke relocation cl.</fullName>
                </value>
                <value>
                    <fullName>Early termination rights</fullName>
                </value>
                <value>
                    <fullName>Exclusion Zone</fullName>
                </value>
                <value>
                    <fullName>Exclusivity</fullName>
                </value>
                <value>
                    <fullName>Fitout Period</fullName>
                </value>
                <value>
                    <fullName>Guarantee</fullName>
                </value>
                <value>
                    <fullName>Lessee entity not the owner of the brand</fullName>
                </value>
                <value>
                    <fullName>Lessee Owns Fitout paid for by fitout contrib.</fullName>
                </value>
                <value>
                    <fullName>Amendment to Lessor indemnities and warranties</fullName>
                </value>
                <value>
                    <fullName>National Change in Security Position</fullName>
                </value>
                <value>
                    <fullName>National Change in Usage</fullName>
                </value>
                <value>
                    <fullName>Deviation from Security Policy</fullName>
                </value>
                <value>
                    <fullName>Non-standard fitout period</fullName>
                </value>
                <value>
                    <fullName>Option Lease</fullName>
                </value>
                <value>
                    <fullName>Percentage Rent</fullName>
                </value>
                <value>
                    <fullName>Radius Clause</fullName>
                </value>
                <value>
                    <fullName>Reduced Outgoings</fullName>
                </value>
                <value>
                    <fullName>Rent Free Period</fullName>
                </value>
                <value>
                    <fullName>Rent Review</fullName>
                </value>
                <value>
                    <fullName>Rent Review which contravenes Act</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionValue__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Rent &gt; $7.5M</fullName>
                    <default>true</default>
                    <label>Annual Rent &gt; $7.5M</label>
                </value>
                <value>
                    <fullName>Recoverable Area &gt; 2500 SQM</fullName>
                </value>
                <value>
                    <fullName>Capital &gt; $5M</fullName>
                </value>
                <value>
                    <fullName>Recoverable area is not same as Rentable area</fullName>
                </value>
                <value>
                    <fullName>Change in the Fitout days</fullName>
                </value>
                <value>
                    <fullName>Security position count &lt; 4</fullName>
                </value>
                <value>
                    <fullName>Change in the standard review type</fullName>
                </value>
                <value>
                    <fullName>Fitout contribution for term less than a year</fullName>
                </value>
                <value>
                    <fullName>Term is more than 10 years</fullName>
                </value>
                <value>
                    <fullName>Atleast 1 number of options</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity RCA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Condition__c</columns>
        <columns>ClauseSubType__c</columns>
        <columns>ConditionValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Opportunity RCA</pluralLabel>
</CustomObject>